--- a/Recepticator/Recepticator/MainWindow.xaml
+++ b/Recepticator/Recepticator/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <TextBox x:Name="OutTextBox" HorizontalAlignment="Left" Height="236" Margin="233,144,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="444"/>
+
     </Grid>
 </Window>
