--- a/Recepticator/Recepticator/MainWindow.xaml
+++ b/Recepticator/Recepticator/MainWindow.xaml
@@ -8,6 +8,7 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <TextBox x:Name="OutTextBox" HorizontalAlignment="Left" Height="236" Margin="233,144,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="444"/>
+        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="111,129,0,0" VerticalAlignment="Top" Width="75" Click="NewMockQuery"/>
 
     </Grid>
 </Window>
