--- a/Recepticator/Recepticator/MainWindow.xaml
+++ b/Recepticator/Recepticator/MainWindow.xaml
@@ -6,9 +6,13 @@
         xmlns:local="clr-namespace:Recepticator"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <Window.DataContext>
+        <local:MainView/>
+    </Window.DataContext>
     <Grid>
-        <TextBox x:Name="OutTextBox" HorizontalAlignment="Left" Height="236" Margin="233,144,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="444"/>
+        <TextBox x:Name="OutTextBox" HorizontalAlignment="Left" Height="44" Margin="233,336,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="444"/>
         <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="111,129,0,0" VerticalAlignment="Top" Width="75" Click="NewMockQuery"/>
+        <DataGrid x:Name="Ingridients" HorizontalAlignment="Left" Height="279" Margin="233,28,0,0" VerticalAlignment="Top" Width="444" ItemsSource="{Binding OutputIngredient}"/>
 
     </Grid>
 </Window>
