--- a/Recepticator/Recepticator/MainWindow.xaml
+++ b/Recepticator/Recepticator/MainWindow.xaml
@@ -11,8 +11,9 @@
     </Window.DataContext>
     <Grid>
         <TextBox x:Name="OutTextBox" HorizontalAlignment="Left" Height="44" Margin="233,336,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="444"/>
-        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="111,129,0,0" VerticalAlignment="Top" Width="75" Click="NewMockQuery"/>
+        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="86,28,0,0" VerticalAlignment="Top" Width="75" Click="NewMockQuery"/>
         <DataGrid x:Name="Ingridients" HorizontalAlignment="Left" Height="279" Margin="233,28,0,0" VerticalAlignment="Top" Width="444" ItemsSource="{Binding OutputIngredient}"/>
+        <StackPanel HorizontalAlignment="Left" Height="128" Margin="21,81,0,0" VerticalAlignment="Top" Width="194"/>
 
     </Grid>
 </Window>
